--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "node-uuid": "^1.4.7",
     "nodemon": "^1.9.2",
     "passport": "^0.3.2",
+    "passport-instagram": "^1.0.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "promised-mongo": "github:makersquare/promised-mongo",
